--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <div class="video">
                 <video src="#" class="video__player" poster="img/poster.jpg"></video>
                 <button class="video__play">
-                    <img src="img/play-icon.svg" alt="play button">
+                    <img class="img" src="img/play-icon.svg" alt="play button">
                 </button>
             </div>
         </section>
